test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/convert_void_ptr_to_int.plx
pub fn main(none) i32 {
    x: *any = 0
    return x #  can't implicitly convert void * to integer as if by assignment
}
